# finetuneparakeet

./: .gitignore  BENCHMARKING.md  FINETUNING_LESSONS.md  LM_SOURCES.md  PLAN.md  README.md  RESULTS.md  USAGE.md  VOXPOPULI_ANALYSIS.md  WSL2_CUDA_ISSUES.md  hf_model_card.md  pyproject.toml  requirements.txt
configs/: finetune_lt.yaml
data/manifests/: ALL_test.json  cv25_lt_dev.json  cv25_lt_test.json  cv25_lt_test_first300.json  cv25_lt_train.json  drift_clips.json  fleurs_lt_test.json  fleurs_lt_train.json  hard_test_500.json  shunyalabs_lt_test.json  shunyalabs_lt_train.json  smoke_test.json  voxpopuli_lt_test.json  voxpopuli_lt_train.json
hf_model_card/: README.md
results/: baseline_error_analysis.txt  eval_audit.txt  ft_beamlm_error_analysis.txt
results/baseline_beamlm_drift/: summary.json
results/baseline_beamlm_test_full/: summary.json
results/baseline_cv25_lt_test/: summary.json
results/baseline_dev/: summary.json
results/baseline_dev_full/: summary.json
results/baseline_fleurs_test/: summary.json
scripts/: 02_extract_cv25.py  03_prepare_manifests.py  04_eval.py  05_finetune.py  06_error_analysis.py  07_eval_audit.py  08_build_lm.py  08b_build_token_lm.py  09_eval_masked.py  10_download_lt_wikipedia.py  11_eval_beam_lm.py  12_build_lm_from_hf.sh  12_eval_leaderboard.py  13_stream_tokenize.py  build_lm_variants.sh  debug_training.py  gcp_eval.sh  gcp_leaderboard_eval.sh  launch_ft_vm.sh  run_eval_only.sh  run_pipeline.sh  run_speechbench_local.py  transcribe.py  vm_eval_final.sh  vm_eval_only.sh  vm_startup.sh
(+31 files in other folders)
